refact: AvalancheReport.isUpdate and AvalancheReport.getPublicationDate